# radical-ticket

./: .gitignore  Cargo.toml  wrangler.toml
benchmark/: anti_fraud_edge_10tickets_10trials.csv  anti_fraud_local_10tickets_10trials.csv  baseline_connection.ipynb  benchmark.py  simple_10tickets_10trials.csv  simple_edge_10tickets_10trials.csv  simple_local_10tickets_10trials.csv
src/: cache.rs  lib.rs
