[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"
rand_distr = "0.4.3"
rand = "0.8.5"
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
